force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/LLC_BI__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Type__c</fullName>
    <description>Populate this picklist field to indicate the deposit account type. This field is manually populated during the deposit account opening workflow.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>MMA Savings</fullName>
            </value>
            <value>
                <fullName>MMA Checking</fullName>
            </value>
            <value>
                <fullName>Business Savings</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>