force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/LLC_BI__Funding_Failure_Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Failure_Detail__c</fullName>
    <description>This optional long text field autopopulates with an error message from the vendor if the account funding request fails.</description>
    <label>Funding Failure Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>