force-app/main/default/objects/LLC_BI__Funding_Method__c/fields/LLC_BI__Funding_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Method_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically set when the user selects a funding method during the New Deposit Workflow. It indicates which Funding Method Type is related to the Funding Method of a deposit account.</description>
    <label>Funding Method Type</label>
    <referenceTo>LLC_BI__Funding_Method_Type__c</referenceTo>
    <relationshipLabel>Funding Methods</relationshipLabel>
    <relationshipName>Funding_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>